# vercel-test

./: main.py  vercel.json
backend/: .gitignore  pyproject.toml  requirements.txt  vercel.json
backend/backend/: app.py  constants.py  main.dev.py  main.py  settings.py
backend/backend/routes/healthy/: constants.py  models.py  router.py
backend/backend/routes/public/v1/test/: api.py  constants.py
