[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Eraz1997 <eraz1997@live.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0.104.1", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
